--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shikoku-react-full",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://codyruan.github.io/my-shikoku-trip",
   "dependencies": {
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.485.0",
@@ -11,16 +12,18 @@
     "react-scripts": "5.0.1",
     "yet-another-react-lightbox": "^3.21.8"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
