feat: add interactive Shikoku map page with region-based navigation

--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/turf": "^7.2.0",
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.485.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
+    "topojson-client": "^3.1.0",
     "yet-another-react-lightbox": "^3.21.8"
   },
   "devDependencies": {
