--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lucide-react": "^0.485.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
